GA-43: improved sonar